# fastapi-async-pg-with-todo-app

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  tasks.py
app/: main.py
app/api/v1/: routes.py
app/common/utils/: errors.py  response.py
app/core/: config.py  logger.py
app/core/db/: engine.py
app/core/db/models/: __init__.py  todos.py  users.py
app/modules/auth/: __init__.py  dependencies.py  routes.py  schemas.py  security.py  services.py
app/modules/todo/: __init__.py  routes.py  schemas.py  services.py
app/modules/todos/: __init__.py  routes.py
app/modules/user/: __init__.py  routes.py  services.py
migrations/: env.py
migrations/versions/: 0228dd8f91a8_added_relationship.py  10c1161a2f34_users_table.py  14db4ac1486d_fixed_password_length.py  20de1207faa6_fixed_timezone_issue.py  685093bea427_added_unique_constraint.py  9f3358d3fcf6_fixed_timezone_issue.py  c3532b2a79b9_users_table.py  c3cb21e09aed_init.py  c8968e0664e0_init.py
scripts/: init_db.py
