[project]
name = "fastapi-async-way-pg-with-todo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "pre-commit>=4.3.0",
]



[dependency-groups]
dev = ["ruff>=0.13.3"]

[tool.ruff]
src = ["app"]
line-length = 88
target-version = "py312"
exclude = [".venv"]

[tool.ruff.lint]
select=["E","F","W","I"]
ignore=["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2
order-by-type = true

[tool.ruff.format]
quote-style="single"
indent-style="space"


